adding more templates

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -8,10 +8,10 @@
     %meta{:name => "author", :content => ""}
 
     / Le styles
-    = stylesheet_link_tag "bootstrap", "bootstrap-responsive"
+    = stylesheet_link_tag "bootstrap", "responsive"
 
   %body
-    .navbar.navbar-fixed-top
+    .navbar
       .navbar-inner
         .container
           %a.btn.btn-navbar{"data-toggle" => "collapse", "data-target" => ".nav-collapse"}
